Fixing up ColumnHolder so enlarge buttons go away at small screen sizes
To avoid problems with the modal being too big to close or see

--- a/src/components/UI/GlitchButton.module.css
+++ b/src/components/UI/GlitchButton.module.css
@@ -42,7 +42,7 @@
   }
 
   .buttonSmall, .buttonSmall::after {
-    min-width: 20%;
+    
     font-size: 36px;
     line-height: 125%;
     font-weight: 600;
