--- a/src/components/layout/MainNavigation.module.css
+++ b/src/components/layout/MainNavigation.module.css
@@ -92,8 +92,9 @@ a{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: rgb(10, 89, 155);
-    padding: 0px 1%;
+    background-color: rgb(211, 211, 211);
+    
+    background-image: url("../../Images/header_image.png");
     
   }
   
@@ -134,8 +135,9 @@ a{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: rgb(10, 89, 155);
-    padding: 0 0%;
+    background-color: rgb(211, 211, 211);
+    
+    background-image: url("../../Images/header_image.png");
   }
   
   .logoTiny {
@@ -175,7 +177,9 @@ a{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: rgb(10, 89, 155);
+    background-color: rgb(211, 211, 211);
+    
+    background-image: url("../../Images/header_image.png");
     
   }
   
